/*
 * $Id: ChangeLog,v 1.2874 2004/05/04 17:03:31 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-04 11:36 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
   * source/vm/cmdarg.c
     ! moved declaration of iHandles to top of function so it can compile w/o
       error under BCC

2004-04-28 16:20 UTC+0200 Giancarlo Niccolai <antispam [at] niccolai/dot/ ws>
  * source/rtl/philes.c
  * source/rtl/filesys.c
  * include/hbapifs.h
    + Added sixth optional parameter to HB_OPENPROCESS that may hold the process
      ID number in return. 
      Not a real "fix", but it's a vital information to many application and
      it has been missing for too much time.

2004-05-04 18:43 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/filesys.c
     ! fixed a syntax typo on OS/2 section around line 2063
   * source/rtl/net.c
     ! removed _gethostname #define, not anymore needed using Innotek GCC 3.2.2

2004-05-04 18:33 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * contrib/libct/fcopy.prg
     ! filecopy() did not close copyed file
   * contrib/libct/files.c
     * (re?)enabled a couple of already available OS/2 sections

2004-05-04 18:21 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * source/vm/arrays.c
     ! line 1562 did not compile with tracing on
   * source/vm/cmdarg.c
     + added OS/2 support to //F: CLIPPER= environment variable switch

2004-05-04 17:55 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * config/os2/gcc.cf
    * switched to gcc version 3.2.2 (Innotek Build 2004-02-23 14:15), so I had to add -DTCPV40HDRS to
      compile using 16/32 bit tcp stack as available on OS/2 v4.x
    + addes -static -s to LD flags to build .exe files which don't require Innotek LIBC .dll, since